// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`collect files > collect files for extension with node_modules 1`] = `
[
  {
    "name": "@babel/core",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/@babel+core@7.26.0/node_modules/@babel/core",
    "version": "7.26.0",
  },
  {
    "name": "convert-source-map",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/convert-source-map@2.0.0/node_modules/convert-source-map",
    "version": "2.0.0",
  },
  {
    "name": "gensync",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/gensync@1.0.0-beta.2/node_modules/gensync",
    "version": "1.0.0-beta.2",
  },
  {
    "name": "json5",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/json5@2.2.3/node_modules/json5",
    "version": "2.2.3",
  },
  {
    "name": "semver",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/semver@6.3.1/node_modules/semver",
    "version": "6.3.1",
  },
  {
    "name": "@babel/code-frame",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/@babel+code-frame@7.26.2/node_modules/@babel/code-frame",
    "version": "7.26.2",
  },
  {
    "name": "@babel/helper-validator-identifier",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/@babel+helper-validator-identifier@7.25.9/node_modules/@babel/helper-validator-identifier",
    "version": "7.25.9",
  },
  {
    "name": "js-tokens",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/js-tokens@4.0.0/node_modules/js-tokens",
    "version": "4.0.0",
  },
  {
    "name": "picocolors",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/picocolors@1.1.1/node_modules/picocolors",
    "version": "1.1.1",
  },
  {
    "name": "@babel/types",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/@babel+types@7.26.3/node_modules/@babel/types",
    "version": "7.26.3",
  },
  {
    "name": "@babel/helper-string-parser",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/@babel+helper-string-parser@7.25.9/node_modules/@babel/helper-string-parser",
    "version": "7.25.9",
  },
  {
    "name": "debug",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/debug@4.4.0/node_modules/debug",
    "version": "4.4.0",
  },
  {
    "name": "ms",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/ms@2.1.3/node_modules/ms",
    "version": "2.1.3",
  },
  {
    "name": "@babel/parser",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/@babel+parser@7.26.3/node_modules/@babel/parser",
    "version": "7.26.3",
  },
  {
    "name": "@ampproject/remapping",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/@ampproject+remapping@2.3.0/node_modules/@ampproject/remapping",
    "version": "2.3.0",
  },
  {
    "name": "@jridgewell/trace-mapping",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/@jridgewell+trace-mapping@0.3.25/node_modules/@jridgewell/trace-mapping",
    "version": "0.3.25",
  },
  {
    "name": "@jridgewell/resolve-uri",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/@jridgewell+resolve-uri@3.1.2/node_modules/@jridgewell/resolve-uri",
    "version": "3.1.2",
  },
  {
    "name": "@jridgewell/sourcemap-codec",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/@jridgewell+sourcemap-codec@1.5.0/node_modules/@jridgewell/sourcemap-codec",
    "version": "1.5.0",
  },
  {
    "name": "@jridgewell/gen-mapping",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/@jridgewell+gen-mapping@0.3.8/node_modules/@jridgewell/gen-mapping",
    "version": "0.3.8",
  },
  {
    "name": "@jridgewell/set-array",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/@jridgewell+set-array@1.2.1/node_modules/@jridgewell/set-array",
    "version": "1.2.1",
  },
  {
    "name": "@babel/generator",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/@babel+generator@7.26.3/node_modules/@babel/generator",
    "version": "7.26.3",
  },
  {
    "name": "jsesc",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/jsesc@3.1.0/node_modules/jsesc",
    "version": "3.1.0",
  },
  {
    "name": "@babel/helper-compilation-targets",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/@babel+helper-compilation-targets@7.25.9/node_modules/@babel/helper-compilation-targets",
    "version": "7.25.9",
  },
  {
    "name": "@babel/compat-data",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/@babel+compat-data@7.26.3/node_modules/@babel/compat-data",
    "version": "7.26.3",
  },
  {
    "name": "@babel/helper-validator-option",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/@babel+helper-validator-option@7.25.9/node_modules/@babel/helper-validator-option",
    "version": "7.25.9",
  },
  {
    "name": "lru-cache",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/lru-cache@5.1.1/node_modules/lru-cache",
    "version": "5.1.1",
  },
  {
    "name": "yallist",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/yallist@3.1.1/node_modules/yallist",
    "version": "3.1.1",
  },
  {
    "name": "browserslist",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/browserslist@4.24.3/node_modules/browserslist",
    "version": "4.24.3",
  },
  {
    "name": "caniuse-lite",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/caniuse-lite@1.0.30001690/node_modules/caniuse-lite",
    "version": "1.0.30001690",
  },
  {
    "name": "electron-to-chromium",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/electron-to-chromium@1.5.76/node_modules/electron-to-chromium",
    "version": "1.5.76",
  },
  {
    "name": "node-releases",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/node-releases@2.0.19/node_modules/node-releases",
    "version": "2.0.19",
  },
  {
    "name": "update-browserslist-db",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/update-browserslist-db@1.1.1_browserslist@4.24.3/node_modules/update-browserslist-db",
    "version": "1.1.1",
  },
  {
    "name": "escalade",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/escalade@3.2.0/node_modules/escalade",
    "version": "3.2.0",
  },
  {
    "name": "@babel/template",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/@babel+template@7.25.9/node_modules/@babel/template",
    "version": "7.25.9",
  },
  {
    "name": "@babel/helpers",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/@babel+helpers@7.26.0/node_modules/@babel/helpers",
    "version": "7.26.0",
  },
  {
    "name": "@babel/traverse",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/@babel+traverse@7.26.4/node_modules/@babel/traverse",
    "version": "7.26.4",
  },
  {
    "name": "globals",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/globals@11.12.0/node_modules/globals",
    "version": "11.12.0",
  },
  {
    "name": "@babel/helper-module-transforms",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/@babel+helper-module-transforms@7.26.0_@babel+core@7.26.0/node_modules/@babel/helper-module-transforms",
    "version": "7.26.0",
  },
  {
    "name": "@babel/helper-module-imports",
    "path": ".vitest-testdirs/vitest-files-collect-files-collect-files-for-extension-with-node_modules/node_modules/.pnpm/@babel+helper-module-imports@7.25.9/node_modules/@babel/helper-module-imports",
    "version": "7.25.9",
  },
]
`;

exports[`content types > should assign default content types for known extensions 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
            <Types xmlns="http://schemas.openxmlformats.org/package/2006/content-types">
              <Default Extension=".txt" ContentType="text/plain" />
<Default Extension=".json" ContentType="application/json" />

             </Types>
          "
`;

exports[`content types > should lookup content types for unknown extensions 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
            <Types xmlns="http://schemas.openxmlformats.org/package/2006/content-types">
              <Default Extension=".jade" ContentType="text/jade" />

             </Types>
          "
`;
